[gd_scene load_steps=4 format=3 uid="uid://buvgpj7ns37s"]

[ext_resource type="Script" path="res://scripts/statistics_menu.gd" id="1_fd4ui"]
[ext_resource type="Texture2D" uid="uid://dqppdst1nged1" path="res://assets/health_bar_back.png" id="2_gs1ih"]
[ext_resource type="Script" path="res://scripts/statistics.gd" id="3_u2pa2"]

[node name="StatisticsMenu" type="Node2D"]
script = ExtResource("1_fd4ui")

[node name="GlobalStatistic" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 593.0
offset_top = 328.0
offset_right = 649.0
offset_bottom = 336.0

[node name="VBoxContainer" type="VBoxContainer" parent="GlobalStatistic"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="GlobalStatistic/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Kills" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Enemies killed "

[node name="KillsValue" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="GlobalStatistic/VBoxContainer"]
layout_mode = 2

[node name="MaxCharacterLevel" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Character level "

[node name="MaxCharacterLevelValue" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " 10"

[node name="HBoxContainer3" type="HBoxContainer" parent="GlobalStatistic/VBoxContainer"]
layout_mode = 2

[node name="LevelsCleared" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Levels cleared "

[node name="LevelsClearedValue" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = " 3"

[node name="HBoxContainer4" type="HBoxContainer" parent="GlobalStatistic/VBoxContainer"]
layout_mode = 2

[node name="TotalExp" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Total exp "

[node name="TotalExpValue" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = " 3"

[node name="HBoxContainer5" type="HBoxContainer" parent="GlobalStatistic/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CombatTime" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Combat time"

[node name="CombatTimeValue" type="Label" parent="GlobalStatistic/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = " 0"

[node name="GlobalStatisticLabel" type="Label" parent="."]
offset_left = 571.0
offset_top = 224.0
offset_right = 663.0
offset_bottom = 250.0
text = "Global stats
"

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 568.0
offset_top = 432.0
offset_right = 668.0
offset_bottom = 472.0
texture_normal = ExtResource("2_gs1ih")

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 40.0
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Statistics" type="Node" parent="."]
script = ExtResource("3_u2pa2")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
